ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foolcontrol
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 40m
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - "foolcontrol.org"
    secretName: wordpress-tls
  rules:
  - host: "foolcontrol.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port:
              name: wp-svc
